<resources>
    <string name="smile">🎵</string>
    <string name="app_name">Crazy Music</string>
    <string name="create_music">Создай мелодию</string>
    <string name="repeat_music">Повтори звук</string>
    <string name="save_music">Мои песни</string>

    <!-- Create Music Screen Strings -->
    <string name="record">Запись</string>
    <string name="info">Информация</string>
    <string name="game_info_title">Как играть</string>

    <string name="game_info_message">Раскройте свой творческий потенциал и создайте свою мелодию в игре Crazy Music!\n\nДля начала выберите понравившийся фрукт и перетащите его в горшок!\n\nЕсли фрукт вам не нравится, нажмите чтобы убрать его!\n\nЕсли мелодия вам нравится, нажмите на кнопку с микрофоном, чтобы записать и сохранить ее для последующего прослушивания!\n\nУдачи и творческих успехов в Crazy Music!</string>

    <string name="stop">Стоп</string>
    <string name="save_composition">Сохранить мелодию</string>
    <string name="composition_name_hint">Введите название (макс. 30 символов)</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="composition_saved">Мелодия сохранена!</string>

    <!-- Settings Screen Strings -->
    <string name="settings_title">Настройки</string>
    <string name="interface_sounds">Звуки интерфейса</string>
    <string name="volume">Громкость</string>
    <string name="volume_percent">70%</string>
    <string name="delete_all_sounds">Удалить все записанные звуки овощей</string>
    <string name="about_game">О игре</string>
    <string name="singing_vegetables">Поющие овощи</string>
    <string name="game_description">Создавайте уникальные мелодии с помощью поющих овощей! Нажимайте на разные овощи, чтобы услышать забавные звуки и сочинять веселые композиции. Идеально для развития музыкального слуха и творчества!</string>
    <!-- New string for back button -->
    <string name="back_button">Назад</string>
</resources>